--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	
 	</nav>
 	<div class="mirror">
-		<img src="images/banner.jpg">
+		<img src="images/header_banner.jpg">
 	</div>
 	<section class="sect_1">
 		<div class="header_text">
