optimize big photo and link to logo font

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 	<title>Племенное хозяйство «Лазаревское». Крупнейшее сельскохозяйственное предприятие Тульской области</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link rel="stylesheet" type="text/css" href="css/parallax.css">
 	<link rel="stylesheet" type="text/css" href="css/bulma.css">
 	<link rel="stylesheet" type="text/css" href="css/carousel.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&amp;subset=cyrillic" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/parallax.js"></script>
 
@@ -67,32 +69,32 @@
 		<div class="container">
 			<div class="columns is-desktop">
 			  <div class="column" style="background-color: #ccc; margin: 10px; padding: 0; max-height: 568px; height:40vw; background: url(images/sub_banner_1.jpg) no-repeat center center; background-size: cover;">
-			    <div style="display:flex; align-items: end; height: 100%;">
-			    	<div style="background-color: #0000004d; width: 100%; text-align: center; padding: 20px;">
+			    <div style="display:flex; align-items: flex-end; height: 100%;">
+			    	<div style="background-color: rgba(0, 0, 0, 0.2); width: 100%; text-align: center; padding: 20px;">
 			    		<h1 class="title is-1" style="color: #fff;">100 000</h1>
 			    		<span class="title is-6" style="color: #fff;">голов свиней свиноводческого комплекса</span>
 			    	</div>
 			    </div>
 			  </div>
 			  <div class="column" style="background-color: #ccc; margin: 10px; padding: 0; max-height: 568px; height:40vw; background: url(images/sub_banner_2.jpg) no-repeat center center; background-size: cover;">
-			    <div style="display:flex; align-items: end; height: 100%;">
-			    	<div style="background-color: #0000004d; width: 100%; text-align: center; padding: 20px;">
+			    <div style="display:flex; align-items: flex-end; height: 100%;">
+			    	<div style="background-color: rgba(0, 0, 0, 0.2); width: 100%; text-align: center; padding: 20px;">
 			    		<h1 class="title is-1" style="color: #fff;">31</h1>
 			    		<span class="title is-6" style="color: #fff;">комбайн и 81 трактор в машино-тракторном парке</span>
 			    	</div>
 			    </div>
 			  </div>
 			  <div class="column" style="background-color: #ccc; margin: 10px; padding: 0; max-height: 568px; height:40vw; background: url(images/sub_banner_1.jpg) no-repeat center center; background-size: cover;">
-			    <div style="display:flex; align-items: end; height: 100%;">
-			    	<div style="background-color: #0000004d; width: 100%; text-align: center; padding: 20px;">
+			    <div style="display:flex; align-items: flex-end; height: 100%;">
+			    	<div style="background-color: rgba(0, 0, 0, 0.2); width: 100%; text-align: center; padding: 20px;">
 			    		<h1 class="title is-1" style="color: #fff;">55 000</h1>
 			    		<span class="title is-6" style="color: #fff;">тонн объем комплекса хранения зерна</span>
 			    	</div>
 			    </div>
 			  </div>
 			  <div class="column" style="background-color: #ccc; margin: 10px; padding: 0; max-height: 568px; height:40vw; background: url(images/sub_banner_2.jpg) no-repeat center center; background-size: cover;">
-			    <div style="display:flex; align-items: end; height: 100%;">
-			    	<div style="background-color: #0000004d; width: 100%; text-align: center; padding: 20px;">
+			    <div style="display:flex; align-items: flex-end; height: 100%;">
+			    	<div style="background-color: rgba(0, 0, 0, 0.2); width: 100%; text-align: center; padding: 20px;">
 			    		<h1 class="title is-1" style="color: #fff;">23 000</h1>
 			    		<span class="title is-6" style="color: #fff;">гектаров сельскохозяйственных угодий</span>
 			    	</div>
