--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 	</div>
 	<div style="width:100%; background-color:#fff;">
 	<div class="container">
-	<div class="columns">
-	  <div class="column is-three-quarters" style="margin: 10px;">
+	<div class="columns is-mobile">
+	  <div class="column" style="margin: 10px;">
 	    <h3 class="title is-3">Наши продукты</h3>
 	  </div>
-	  <div class="column" style="margin: 10px; text-align: right;">
+	  <div class="column is-one-quarters" style="margin: 10px; text-align: right;">
 	    <a class="button is-warning"><i class="fa fa-download" style="margin-right: 8px;"></i>  Скачать каталог</a>
 	  </div>
 	</div>
@@ -175,26 +175,26 @@
   </div>
 </div>
 	<div class="container">
-	<div class="columns">
-	  <div class="column is-three-quarters" style="margin: 10px;">
+	<div class="columns is-mobile">
+	  <div class="column" style="margin: 10px;">
 	    <h3 class="title is-3">События</h3>
 	  </div>
-	  <div class="column" style="margin: 10px; text-align: right;">
+	  <div class="column is-one-quarters" style="margin: 10px; text-align: right;">
 	    <a class="button is-warning">Все события <i class="fa fa-chevron-right" style="margin-left: 8px;"></i></a>
 	  </div>
 	</div>
 	</div>
 	<div class="container">
-	<div class="columns">
+	<div class="columns is-desktop">
 	  <div class="column" style="margin: 10px;">
 	  	<h6 class="title is-6">12.06.2017</h6>
 	    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
 	  </div>
-	  <div class="column" style="margin: 10px;">
+	  <div class="column is-desktop" style="margin: 10px;">
 	    <h6 class="title is-6">12.06.2017</h6>
 	    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
 	  </div>
-	  <div class="column" style="margin: 10px;">
+	  <div class="column is-desktop" style="margin: 10px;">
 	    <h6 class="title is-6">12.06.2017</h6>
 	    <h4 class="title is-4"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
 	  </div>
