--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 	</style>
 </head>
 <body>
-	<nav class="navbar">
+	<nav class="navbar mobile-fixed">
 		
 	  <div class="navbar-brand">
 	    <a class="navbar-item" href="http://bulma.io">
 	      <div class="logo">ЛАЗАРЕВСКОЕ</div>
 	    </a>
 
-	    <div class="navbar-burger nav-toggle" for="nav-toggle-state">
+	    <div class="navbar-burger"  data-target="navMenu" for="nav-toggle-state">
 	      <span></span>
 	      <span></span>
 	      <span></span>
@@ -211,7 +211,7 @@
 	    <div class="columns">
 	    	<div class="column is-12">
 		    	<div id="YMapsID">
-
+		    		<div class="shield"></div>
 		    		<div class="adress">
 			    <div class="tabs">
 				  <ul>
@@ -421,5 +421,33 @@
 		</div>
 	  </div>
 	</footer>
+	<script type="text/javascript">
+		document.addEventListener('DOMContentLoaded', function () {
+
+		  // Get all "navbar-burger" elements
+		  var $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+		  // Check if there are any nav burgers
+		  if ($navbarBurgers.length > 0) {
+
+		    // Add a click event on each of them
+		    $navbarBurgers.forEach(function ($el) {
+		      $el.addEventListener('click', function () {
+
+		        // Get the target from the "data-target" attribute
+		        var target = $el.dataset.target;
+		        var $target = document.getElementById(target);
+
+		        // Toggle the class on both the "navbar-burger" and the "navbar-menu"
+		        $el.classList.toggle('is-active');
+		        $target.classList.toggle('is-active');
+
+		      });
+		    });
+		  }
+
+		});
+
+	</script>
 </body>
 </html>
