--- a/products.html
+++ b/products.html
@@ -48,60 +48,145 @@
 		</div>
 	
 	</nav>
-	<div class="container article">
+	<div class="container">
+		<div class="columns is-desktop">
+		  <div class="column">
+		    <h3 class="title is-3">Сельскохозяйственная продукция</h3>
+		  </div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="columns is-desktop">
+		  <div class="column count-item item-1">
+		    <div class="count-div">
+		    	<div>
+		    		<h1 class="title is-3">Свиньи живым весом</h1>
+		    	</div>
+		    </div>
+		  </div>
+		  <div class="column count-item item-2">
+		    <div class="count-div">
+		    	<div>
+		    		<h1 class="title is-3">Зерно</h1>
+		    	</div>
+		    </div>
+		  </div>
+		</div>
+		</div>
+	</div>
+	<div class="container">
 		<div class="columns">
-			<div class="column is-8 is-offset-2">
-				<h1 class="title is-2">О предприятии</h1>
-				<p>ООО "ПХ «Лазаревское»" является крупнейшим сельскохозяйственным предприятием Тульской области, расположенным в 50-ти км. южнее г. Тулы.
-				</p>
-				<p>Основные виды деятельности – производство и переработка сельскохозяйственной продукции растениеводства и животноводства.
-				</p>
-				<h2 class="title is-3 center">Более 10 000 тонн мяса свиней</h2>
-				<p class="center">лучших мясных пород ежегодно поставляет на рынок  – это около 77 % свинины по Тульской области.</p>
-				<p class="center">На племенной ферме выращивают свиней пород:</p>
+		  <div class="column count-item item-1">
+		    <div class="count-div">
+		    	<div>
+		    		<h1 class="title is-3">Картофель</h1>
+		    	</div>
+		    </div>
+		  </div>
+		  <div class="column count-item item-2">
+		    <div class="count-div">
+		    	<div>
+		    		<h1 class="title is-3">Полутуши</h1>
+		    	</div>
+		    </div>
+		  </div>
+		</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="columns is-mobile">
+		  <div class="column">
+		    <h3 class="title is-3">Продукция переработки</h3>
+		  </div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="columns">
+		  <div class="column count-item item-1">
+		    <div class="count-div">
+		    	<div>
+		    		<h1 class="title is-3">Колбасы варёные</h1>
+		    	</div>
+		    </div>
+		  </div>
+		  <div class="column count-item item-2">
+		    <div class="count-div">
+		    	<div>
+		    		<h1 class="title is-3">Сосиски и сардельки</h1>
+		    	</div>
+		    </div>
+		  </div>
+		</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="columns">
+		  <div class="column count-item item-1">
+		    <div class="count-div">
+		    	<div>
+		    		<h1 class="title is-3">Сало и шпики</h1>
+		    	</div>
+		    </div>
+		  </div>
+			<div class="column count-item item-2">
+				<div class="count-div">
+					<div>
+						<h1 class="title is-3">Полуфабрикаты</h1>
+					</div>
+				</div>
+			</div>
+			<div class="column count-item item-2">
+				<div class="count-div">
+					<div>
+						<h1 class="title is-3">Свиньи живым весом</h1>
+					</div>
+				</div>
+			</div>
 			</div>
 		</div>
+	</div>
+	<div class="container">
 		<div class="columns">
-		  <div class="column is-4 is-offset-2 count-item item-1">
+		  <div class="column count-item item-1">
 		    <div class="count-div">
 		    	<div>
-		    		<h1 class="title is-1">Крупная белая</h1>
+		    		<h1 class="title is-3">Копчености и копчено-вареная продукция</h1>
 		    	</div>
 		    </div>
 		  </div>
-		  <div class="column is-4 count-item item-2">
+		  <div class="column count-item item-2">
 		    <div class="count-div">
 		    	<div>
-		    		<h1 class="title is-1">Дюрок</h1>
+		    		<h1 class="title is-3">Колбасы варёно-копчёные и полукопчёные</h1>
 		    	</div>
 		    </div>
 		  </div>
 		</div>
-		<div class="columns">
-		  <div class="column is-4 is-offset-2 count-item item-1">
-		    <div class="count-div">
-		    	<div>
-		    		<h1 class="title is-1">Ландрас</h1>
-		    	</div>
-		    </div>
-		  </div>
-		  <div class="column is-4 count-item item-2">
-		    <div class="count-div">
-		    	<div>
-		    		<h1 class="title is-1">Йоркшир</h1>
-		    	</div>
-		    </div>
-		  </div>
 		</div>
+	</div>
+	<div class="container">
 		<div class="columns">
-			<div class="column is-8 is-offset-2">
-				<h1 class="title is-2 center">До 3000 голов племенного молодняка</h1>
-				<p class="center">поставляет предприятие в 20 регионов России.</p>
-				<h1 class="title is-2 center">20222 га (18104 га – пашня)</h1>
-				<p>общая площадь сельскохозяйственных угодий. В настоящее время на этих землях налажено производство ячменя, пшеницы, овса, гороха, кукурузы, картофеля, подсолнечника и рапса.</p>
-				<h1 class="title is-2 center">Более 55 000 тонн зерна выращивается и 40 000 тонн комбикормов производится</h1>
-				<p>ежегодно для обеспечения кормами содержащихся в хозяйстве животных. Освоено производство белкового концентрата до 4000 тонн в год.</p>
-				<p>ООО "ПХ «Лазаревское»" постоянно оказывает финансовую помощь организациям инвалидов, медицинским учреждениям, Яснополянскому детскому дому, дому – интернату, спортивным клубам, образовательным учреждениям (школа, детсад). Проводится работа по возрождению культурного и духовного наследия, участие в строительство Православного Храма на территории пос. Лазарево. Также, в поселке проведена работа по благоустройству и расширению парка, смонтирована сцена и площадка для отдыха, построен детский городок.</p>
+		  <div class="column count-item item-1">
+		    <div class="count-div">
+		    	<div>
+		    		<h1 class="title is-3">Субпродукты</h1>
+		    	</div>
+		    </div>
+		  </div>
+			<div class="column count-item item-2">
+				<div class="count-div">
+					<div>
+						<h1 class="title is-3">Мясо</h1>
+					</div>
+				</div>
+			</div>
+			<div class="column count-item item-2">
+				<div class="count-div">
+					<div>
+						<h1 class="title is-3">Молочная продукция</h1>
+					</div>
+				</div>
+			</div>
 			</div>
 		</div>
 	</div>
@@ -135,7 +220,6 @@
 	    		<p><strong>+7 (48751) 72-251</strong></p>
 			</div>
 		</div>
-	  </div>
 	</footer>
 	<script type="text/javascript">
 		document.addEventListener('DOMContentLoaded', function () {
