--- a/stores.html
+++ b/stores.html
@@ -17,177 +17,54 @@
 	<style type="text/css">
 		#YMapsID {
 		    width: 100%;
-		    height: 95vh;
+		    height: 90vh;
 		}
 	</style>
 </head>
 <body>
 	<nav class="navbar mobile-fixed">
 		
-		<div class="navbar-brand">
-			<a class="navbar-item" href="index.html">
-			  <div class="logo">ЛАЗАРЕВСКОЕ</div>
-			</a>
+	  <div class="navbar-brand">
+	    <a class="navbar-item" href="index.html">
+	      <div class="logo">ЛАЗАРЕВСКОЕ</div>
+	    </a>
 
-			<div class="navbar-burger"  data-target="navMenu" for="nav-toggle-state">
-			  <span></span>
-			  <span></span>
-			  <span></span>
-			</div>
+	    <div class="navbar-burger"  data-target="navMenu" for="nav-toggle-state">
+	      <span></span>
+	      <span></span>
+	      <span></span>
+	    </div>
+	</div>
+	<div class="navbar-menu" id="navMenu">
+		<div class="navbar-end">
+			<a class="navbar-item" href="products.html" target="_blank">
+			ПРОДУКЦИЯ
+			</a>
+			<a class="navbar-item" href="stores.html" target="_blank">
+			МАГАЗИНЫ
+			</a>
+			<a class="navbar-item" href="events.html" target="_blank">
+			СОБЫТИЯ
+			</a>
+			<a class="navbar-item" href="jobs.html" target="_blank">
+			ВАКАНСИИ
+			</a>
+			<a class="navbar-item" href="videos.html" target="_blank">
+			ВИДЕО
+			</a>
+			<a class="navbar-item" href="about.html" target="_blank">
+			О КОМПАНИИ
+			</a>
+			<a class="navbar-item" href="contacts.html" target="_blank">
+			КОНТАКТЫ
+			</a>
 		</div>
-		<div class="navbar-menu" id="navMenu">
-			<div class="navbar-end">
-				<a class="navbar-item" href="products.html">ПРОДУКЦИЯ</a>
-				<a class="navbar-item" href="stores.html">МАГАЗИНЫ</a>
-				<a class="navbar-item" href="events.html">СОБЫТИЯ</a>
-				<a class="navbar-item" href="jobs.html">ВАКАНСИИ</a>
-				<a class="navbar-item" href="videos.html">ВИДЕО</a>
-				<a class="navbar-item" href="about.html">О КОМПАНИИ</a>
-				<a class="navbar-item" href="contacts.html">КОНТАКТЫ</a>
-			</div>
 		</div>
+	
 	</nav>
-	<!-- <div class="mirror">
-		<img src="images/header_banner.jpg">
-	</div> -->
-	<section class="sect_1">
-		<div class="header_text">
-			<h1 class="title is-1" style="color: #fff;">Племенное хозяйство «Лазаревское»</h1>
-	    	<p>крупнейшее сельскохозяйственное предприятие Тульской области</p>
-		</div>
-	</section>
-	<div style="width:100%; background-color:#fff; padding-top: 3rem;">
-		<div class="container">
-			<div class="columns is-desktop">
-			  <div class="column count-item item-1">
-			    <div class="count-div">
-			    	<div>
-			    		<h1 class="title is-1">100 000</h1>
-			    		<span class="title is-6">голов свиней свиноводческого комплекса</span>
-			    	</div>
-			    </div>
-			  </div>
-			  <div class="column count-item item-2">
-			    <div class="count-div">
-			    	<div>
-			    		<h1 class="title is-1">31</h1>
-			    		<span class="title is-6">комбайн и 81 трактор в машино-тракторном парке</span>
-			    	</div>
-			    </div>
-			  </div>
-			  <div class="column count-item item-3">
-			    <div class="count-div">
-			    	<div>
-			    		<h1 class="title is-1">55 000</h1>
-			    		<span class="title is-6">тонн объем комплекса хранения зерна</span>
-			    	</div>
-			    </div>
-			  </div>
-			  <div class="column count-item item-2">
-			    <div class="count-div">
-			    	<div>
-			    		<h1 class="title is-1">23 000</h1>
-			    		<span class="title is-6">гектаров сельскохозяйственных угодий</span>
-			    	</div>
-			    </div>
-			  </div>
-			</div>
-		</div>
-	</div>
-	<div style="width:100%; background-color:#fff;">
-	<div class="container">
-	<div class="columns is-mobile">
-	  <div class="column">
-	    <h3 class="title is-3">Продукция</h3>
-	  </div>
-	  <div class="column is-one-quarters" style="text-align: right;">
-	    <a class="button is-warning"><i class="fa fa-download" style="margin-right: 8px;"></i>  Скачать каталог</a>
-	  </div>
-	</div>
-	</div>
-	</div>
-	<div class="carousel-container">
-  <div class="carousel my-carousel carousel--translate">
-    <input class="carousel__activator" type="radio" name="carousel" id="F" checked="checked"/>
-    <input class="carousel__activator" type="radio" name="carousel" id="G"/>
-    <input class="carousel__activator" type="radio" name="carousel" id="H"/>
-    <input class="carousel__activator" type="radio" name="carousel" id="I"/>
-    <input class="carousel__activator" type="radio" name="carousel" id="J"/>
-    <div class="carousel__controls">
-      <label class="carousel__control carousel__control--backward" for="J"></label>
-      <label class="carousel__control carousel__control--forward" for="G"></label>
-    </div>
-    <div class="carousel__controls">
-      <label class="carousel__control carousel__control--backward" for="F"></label>
-      <label class="carousel__control carousel__control--forward" for="H"></label>
-    </div>
-    <div class="carousel__controls">
-      <label class="carousel__control carousel__control--backward" for="G"></label>
-      <label class="carousel__control carousel__control--forward" for="I"></label>
-    </div>
-    <div class="carousel__controls">
-      <label class="carousel__control carousel__control--backward" for="H"></label>
-      <label class="carousel__control carousel__control--forward" for="J"></label>
-    </div>
-    <div class="carousel__controls">
-      <label class="carousel__control carousel__control--backward" for="I"></label>
-      <label class="carousel__control carousel__control--forward" for="F"></label>
-    </div>
-    <div class="carousel__track">
-      <div class="carousel__slide">
-        <h1><a href="#">Колбаса вареная Чайная</a></h1>
-      </div>
-      <div class="carousel__slide">
-        <h1><a href="#">Колбаса полукопченная Одесская</a></h1>
-      </div>
-      <div class="carousel__slide">
-        <h1><a href="#">Колбаски кабаноси Зальцбург</a></h1>
-      </div>
-      <div class="carousel__slide">
-        <h1><a href="#">Орех говяжий копчено-вареныи Люкс</a></h1>
-      </div>
-      <div class="carousel__slide">
-        <h1><a href="#">Мякоть говядины на кости</a></h1>
-      </div>
-    </div>
-    <div class="carousel__indicators">
-      <label class="carousel__indicator" for="F"></label>
-      <label class="carousel__indicator" for="G"></label>
-      <label class="carousel__indicator" for="H"></label>
-      <label class="carousel__indicator" for="I"></label>
-      <label class="carousel__indicator" for="J"></label>
-    </div>
-  </div>
-</div>
-	<div class="container">
-	<div class="columns is-mobile">
-	  <div class="column">
-	    <h3 class="title is-3">События</h3>
-	  </div>
-	  <div class="column is-one-quarters" style="text-align: right;">
-	    <a class="button is-warning">Все события <i class="fa fa-chevron-right" style="margin-left: 8px;"></i></a>
-	  </div>
-	</div>
-	</div>
-	<div class="container">
-	<div class="columns is-desktop">
-	  <div class="column">
-	  	<h6 class="title is-6">12.06.2017</h6>
-	    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
-	  </div>
-	  <div class="column is-desktop">
-	    <h6 class="title is-6">12.06.2017</h6>
-	    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
-	  </div>
-	  <div class="column is-desktop">
-	    <h6 class="title is-6">12.06.2017</h6>
-	    <h4 class="title is-4"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
-	  </div>
-	</div>
-	</div>
 	<div class="container">
 		<div class="columns">
-		  <div class="column">
+		  <div class="column" style="margin: 10px;">
 		    <h3 class="title is-3">Магазины</h3>
 		  </div>
 		</div>
