add photos for products

--- a/about.html
+++ b/about.html
@@ -62,14 +62,16 @@
 			</div>
 		</div>
 		<div class="columns">
-		  <div class="column is-4 is-offset-2 count-item item-1">
+		  <div class="column is-8 is-offset-2 half-height count-item item-belaya">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-1">Крупная белая</h1>
 		    	</div>
 		    </div>
 		  </div>
-		  <div class="column is-4 count-item item-2">
+		</div>
+		<div class="columns">
+		  <div class="column is-8 is-offset-2 half-height count-item item-durok">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-1">Дюрок</h1>
@@ -78,17 +80,10 @@
 		  </div>
 		</div>
 		<div class="columns">
-		  <div class="column is-4 is-offset-2 count-item item-1">
+		  <div class="column is-8 is-offset-2 half-height count-item item-landras">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-1">Ландрас</h1>
-		    	</div>
-		    </div>
-		  </div>
-		  <div class="column is-4 count-item item-2">
-		    <div class="count-div">
-		    	<div>
-		    		<h1 class="title is-1">Йоркшир</h1>
 		    	</div>
 		    </div>
 		  </div>
