--- a/products.html
+++ b/products.html
@@ -57,39 +57,39 @@
 	</div>
 	<div class="container">
 		<div class="columns is-desktop">
-		  <div class="column count-item item-1">
+		  <a href="#" class="column half-height count-item item-1">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-3">Свиньи живым весом</h1>
 		    	</div>
 		    </div>
-		  </div>
-		  <div class="column count-item item-2">
+		  </a>
+		  <a href="#" class="column half-height count-item item-2">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-3">Зерно</h1>
 		    	</div>
 		    </div>
-		  </div>
+		  </a>
 		</div>
 		</div>
 	</div>
 	<div class="container">
 		<div class="columns">
-		  <div class="column count-item item-1">
+		  <a href="#" class="column half-height count-item item-1">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-3">Картофель</h1>
 		    	</div>
 		    </div>
-		  </div>
-		  <div class="column count-item item-2">
+		  </a>
+		  <a href="#" class="column half-height count-item item-2">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-3">Полутуши</h1>
 		    	</div>
 		    </div>
-		  </div>
+		  </a>
 		</div>
 		</div>
 	</div>
@@ -98,96 +98,97 @@
 		  <div class="column">
 		    <h3 class="title is-3">Продукция переработки</h3>
 		  </div>
+		  <div class="column is-one-quarters" style="text-align: right;">
+		    <a class="button is-warning"><i class="fa fa-download" style="margin-right: 8px;"></i>  Скачать каталог</a>
+		  </div>
 		</div>
 	</div>
 	<div class="container">
 		<div class="columns">
-		  <div class="column count-item item-1">
+		  <a href="#" class="column half-height count-item item-varn">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-3">Колбасы варёные</h1>
 		    	</div>
 		    </div>
-		  </div>
-		  <div class="column count-item item-2">
+		  </a>
+		  <a href="#" class="column half-height count-item item-sausage">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-3">Сосиски и сардельки</h1>
 		    	</div>
 		    </div>
-		  </div>
+		  </a>
 		</div>
-		</div>
+	</div>
 	</div>
 	<div class="container">
 		<div class="columns">
-		  <div class="column count-item item-1">
-		    <div class="count-div">
-		    	<div>
-		    		<h1 class="title is-3">Сало и шпики</h1>
-		    	</div>
-		    </div>
-		  </div>
-			<div class="column count-item item-2">
+		  	<a href="#" class="column half-height count-item item-liver">
+			    <div class="count-div">
+			    	<div>
+			    		<h1 class="title is-3">Субпродукты</h1>
+			    	</div>
+			    </div>
+			  </a>
+			<a href="#" class="column half-height count-item item-subfactory">
 				<div class="count-div">
 					<div>
 						<h1 class="title is-3">Полуфабрикаты</h1>
 					</div>
 				</div>
-			</div>
-			<div class="column count-item item-2">
+			</a>
+			<a href="#" class="column half-height count-item item-farsh">
 				<div class="count-div">
 					<div>
-						<h1 class="title is-3">Свиньи живым весом</h1>
+						<h1 class="title is-3">Фарши</h1>
 					</div>
 				</div>
-			</div>
-			</div>
+			</a>
 		</div>
 	</div>
 	<div class="container">
 		<div class="columns">
-		  <div class="column count-item item-1">
+		  <a href="#" class="column half-height count-item item-kopchen">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-3">Копчености и копчено-вареная продукция</h1>
 		    	</div>
 		    </div>
-		  </div>
-		  <div class="column count-item item-2">
+		  </a>
+		  <a href="#" class="column half-height count-item item-odesskaya">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-3">Колбасы варёно-копчёные и полукопчёные</h1>
 		    	</div>
 		    </div>
-		  </div>
-		</div>
+		  </a>
 		</div>
 	</div>
 	<div class="container">
 		<div class="columns">
-		  <div class="column count-item item-1">
+		  
+		  <a href="#" class="column half-height count-item item-salo">
 		    <div class="count-div">
 		    	<div>
-		    		<h1 class="title is-3">Субпродукты</h1>
+		    		<h1 class="title is-3">Сало и шпики</h1>
 		    	</div>
 		    </div>
-		  </div>
-			<div class="column count-item item-2">
+		  </a>
+			<a href="#" class="column half-height count-item item-meat">
 				<div class="count-div">
 					<div>
 						<h1 class="title is-3">Мясо</h1>
 					</div>
 				</div>
-			</div>
-			<div class="column count-item item-2">
+			</a>
+			<a href="#" class="column half-height count-item item-2">
 				<div class="count-div">
 					<div>
 						<h1 class="title is-3">Молочная продукция</h1>
 					</div>
 				</div>
-			</div>
-			</div>
+			</a>
 		</div>
 	</div>
 	<footer class="footer">
