--- a/stores.html
+++ b/stores.html
@@ -37,30 +37,15 @@
 	</div>
 	<div class="navbar-menu" id="navMenu">
 		<div class="navbar-end">
-			<a class="navbar-item" href="products.html" target="_blank">
-			ПРОДУКЦИЯ
-			</a>
-			<a class="navbar-item" href="stores.html" target="_blank">
-			МАГАЗИНЫ
-			</a>
-			<a class="navbar-item" href="events.html" target="_blank">
-			СОБЫТИЯ
-			</a>
-			<a class="navbar-item" href="jobs.html" target="_blank">
-			ВАКАНСИИ
-			</a>
-			<a class="navbar-item" href="videos.html" target="_blank">
-			ВИДЕО
-			</a>
-			<a class="navbar-item" href="about.html" target="_blank">
-			О КОМПАНИИ
-			</a>
-			<a class="navbar-item" href="contacts.html" target="_blank">
-			КОНТАКТЫ
-			</a>
+				<a class="navbar-item" href="products.html">ПРОДУКЦИЯ</a>
+				<a class="navbar-item" href="stores.html">МАГАЗИНЫ</a>
+				<a class="navbar-item" href="events.html">СОБЫТИЯ</a>
+				<a class="navbar-item" href="jobs.html">ВАКАНСИИ</a>
+				<a class="navbar-item" href="videos.html">ВИДЕО</a>
+				<a class="navbar-item" href="about.html">О КОМПАНИИ</a>
+				<a class="navbar-item" href="contacts.html">КОНТАКТЫ</a>
+			</div>
 		</div>
-		</div>
-	
 	</nav>
 	<div class="container">
 		<div class="columns">
