--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    	<p>крупнейшее сельскохозяйственное предприятие Тульской области</p>
 		</div>
 	</section>
-	<div style="width:100%; background-color:#fff; padding-top: 3rem;">
+	<div style="background-color:#fff; padding-top: 0.75rem;">
 		<div class="container">
 			<div class="columns is-desktop">
 			  <div class="column count-item item-1">
@@ -83,7 +83,7 @@
 			    	</div>
 			    </div>
 			  </div>
-			  <div class="column count-item item-2">
+			  <div class="column count-item item-field">
 			    <div class="count-div">
 			    	<div>
 			    		<h1 class="title is-1">23 000</h1>
