fixed margin columns

--- a/stores.html
+++ b/stores.html
@@ -49,15 +49,13 @@
 	</nav>
 	<div class="container">
 		<div class="columns">
-		  <div class="column" style="margin: 10px;">
-		    <h3 class="title is-3">Магазины</h3>
+		  <div class="column">
+		    <h2 class="title is-2">Магазины</h2>
 		  </div>
 		</div>
 	</div>
 	<div class="container">
-	    <div class="columns">
-	    	<div class="column is-12">
-		    	<div id="YMapsID">
+	    	<div id="YMapsID">
 		    		<div class="shield"></div>
 		    		<div class="adress">
 			    <div class="tabs">
@@ -231,9 +229,6 @@
 				  </ul>
 				</aside>
 		    </div>
-			    </div>
-		    </div>
-		    
 	    </div>
 	</div>
 	<footer class="footer">
