remove links to maps in another pages

--- a/index.html
+++ b/index.html
@@ -173,20 +173,20 @@
 	<div class="columns is-desktop">
 	  <div class="column">
 	  	<h6 class="title is-6">12.06.2017</h6>
-	    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
+	    <h4 class="title is-4 news"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
 	  </div>
 	  <div class="column is-desktop">
 	    <h6 class="title is-6">12.06.2017</h6>
-	    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
+	    <h4 class="title is-4 news"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
 	  </div>
 	  <div class="column is-desktop">
 	    <h6 class="title is-6">12.06.2017</h6>
-	    <h4 class="title is-4"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
+	    <h4 class="title is-4 news"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
 	  </div>
 	</div>
 	</div>
 	<div class="container">
-		<div class="columns">
+		<div class="columns is-mobile">
 		  <div class="column">
 		    <h3 class="title is-3">Магазины</h3>
 		  </div>
