--- a/events.html
+++ b/events.html
@@ -11,15 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="js/parallax.js"></script>
-	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-	<script type="text/javascript" src="js/map.js"></script>
-	<style type="text/css">
-		#YMapsID {
-		    width: 100%;
-		    height: 95vh;
-		}
-	</style>
 </head>
 <body>
 	<nav class="navbar mobile-fixed">
@@ -59,36 +50,36 @@
 		<div class="columns is-desktop">
 		  <div class="column">
 		  	<h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
-		    <a class="button is-warning">Подробнее</a>
+		    <h4 class="title is-4 news"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
+		    <a class="button is-warning news">Подробнее</a>
 		  </div>
 		  <div class="column is-desktop">
 		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
+		    <h4 class="title is-4 news"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
+		    <a class="button is-warning news">Подробнее</a>
 		  </div>
 		  <div class="column is-desktop">
 		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
+		    <h4 class="title is-4 news"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
+		    <a class="button is-warning news">Подробнее</a>
 		  </div>
 		</div>
 		<div class="container">
 		<div class="columns is-desktop">
 		  <div class="column">
 		  	<h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
-		    <a class="button is-warning">Подробнее</a>
+		    <h4 class="title is-4 news"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
+		    <a class="button is-warning news">Подробнее</a>
 		  </div>
 		  <div class="column is-desktop">
 		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
+		    <h4 class="title is-4 news"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
+		    <a class="button is-warning news">Подробнее</a>
 		  </div>
 		  <div class="column is-desktop">
 		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
+		    <h4 class="title is-4 news"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
+		    <a class="button is-warning news">Подробнее</a>
 		  </div>
 		</div>
 		</div>
