--- a/index.html
+++ b/index.html
@@ -171,17 +171,17 @@
 	</div>
 	<div class="container">
 	<div class="columns is-desktop">
-	  <div class="column">
+	  <div class="column news">
 	  	<h6 class="title is-6">12.06.2017</h6>
-	    <h4 class="title is-4 news"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
+	    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
 	  </div>
-	  <div class="column is-desktop">
+	  <div class="column news">
 	    <h6 class="title is-6">12.06.2017</h6>
-	    <h4 class="title is-4 news"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
+	    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
 	  </div>
-	  <div class="column is-desktop">
+	  <div class="column news">
 	    <h6 class="title is-6">12.06.2017</h6>
-	    <h4 class="title is-4 news"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
+	    <h4 class="title is-4"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
 	  </div>
 	</div>
 	</div>
