jobs, contacts is done

--- a/jobs.html
+++ b/jobs.html
@@ -37,51 +37,92 @@
 				<a class="navbar-item" href="contacts.html">КОНТАКТЫ</a>
 			</div>
 		</div>
-	
 	</nav>
 	<div class="container">
 		<div class="columns is-mobile">
-		  <div class="column">
-		    <h2 class="title is-2">События</h2>
-		  </div>
+			<div class="column">
+				<h2 class="title is-2">Вакансии</h2>
+			</div>
 		</div>
-		</div>
-		<div class="container">
+	</div>
+	<div class="container">
+		<p style="margin: 5px 15px;">Телефоны: <strong>+7(48751)72-251, +7(48751)72-288</strong></p>
+		<p style="margin: 5px 15px;">E-mail: <strong><a href="mailto:kadr@lazarevo.ru">kadr@lazarevo.ru</a></strong></p>
+	</div>
+	<div class="container">
 		<div class="columns is-desktop">
-		  <div class="column news">
-		  	<h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
-		  <div class="column news">
-		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
-		  <div class="column news">
-		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
+		  	<div class="column job">
+				<h4 class="title is-4"><a href="#">Агроном-семеновод</a></h4>
+				<ul>
+					<h6>Обязанности:</h6>
+					<li>
+						Требуется агроном-семеновод. Зарплата от 30 т.р. 5-ти дневный рабочий график.
+					</li>
+					<h6>Требования:</h6>
+					<li>
+						Опыт работы не менее года. Высшее образование. Желательно права категории В.
+					</li>
+					<h6>Условия:</h6>
+					<li>
+						Зарплата от 30 т.р. 5-ти дневный рабочий график.
+					</li>
+				</ul>
+	    	</div>
+			<div class="column job">
+				<h4 class="title is-4"><a href="#">Зоотехник</a></h4>
+				<ul>
+					<h6>Обязанности:</h6>
+					<li>
+						Требуется агроном-семеновод. Зарплата от 30 т.р. 5-ти дневный рабочий график.
+					</li>
+					<h6>Требования:</h6>
+					<li>
+						Опыт работы не менее года. Высшее образование. Желательно права категории В.
+					</li>
+					<h6>Условия:</h6>
+					<li>
+						Зарплата от 30 т.р. 5-ти дневный рабочий график.
+					</li>
+				</ul>
+			</div>
 		</div>
-		<div class="container">
+	</div>
+	<div class="container">
 		<div class="columns is-desktop">
-		  <div class="column news">
-		  	<h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
-		  <div class="column news">
-		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
-		    <a class="button is-warning ">Подробнее</a>
-		  </div>
-		  <div class="column news">
-		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4 "><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
-		</div>
+		  	<div class="column job">
+				<h4 class="title is-4"><a href="#">Агроном-семеновод</a></h4>
+				<ul>
+					<h6>Обязанности:</h6>
+					<li>
+						Требуется агроном-семеновод. Зарплата от 30 т.р. 5-ти дневный рабочий график.
+					</li>
+					<h6>Требования:</h6>
+					<li>
+						Опыт работы не менее года. Высшее образование. Желательно права категории В.
+					</li>
+					<h6>Условия:</h6>
+					<li>
+						Зарплата от 30 т.р. 5-ти дневный рабочий график.
+					</li>
+				</ul>
+	    	</div>
+			<div class="column job">
+				<h4 class="title is-4"><a href="#">Зоотехник</a></h4>
+				<ul>
+					<h6>Обязанности:</h6>
+					<li>
+						Требуется агроном-семеновод. Зарплата от 30 т.р. 5-ти дневный рабочий график.
+					</li>
+					<h6>Требования:</h6>
+					<li>
+						Опыт работы не менее года. Высшее образование. Желательно права категории В.
+					</li>
+					<h6>Условия:</h6>
+					<li>
+						Зарплата от 30 т.р. 5-ти дневный рабочий график.
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<footer class="footer">
