--- a/contacts.html
+++ b/contacts.html
@@ -11,6 +11,14 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script type="text/javascript" src="js/map_contacts.js"></script>
+	<style type="text/css">
+		#YMapsID {
+		    width: 100%;
+		    height: 90vh;
+		}
+	</style>
 </head>
 <body>
 	<nav class="navbar mobile-fixed">
@@ -27,7 +35,7 @@
 	    </div>
 	</div>
 	<div class="navbar-menu" id="navMenu">
-			<div class="navbar-end">
+		<div class="navbar-end">
 				<a class="navbar-item" href="products.html">ПРОДУКЦИЯ</a>
 				<a class="navbar-item" href="stores.html">МАГАЗИНЫ</a>
 				<a class="navbar-item" href="events.html">СОБЫТИЯ</a>
@@ -37,52 +45,49 @@
 				<a class="navbar-item" href="contacts.html">КОНТАКТЫ</a>
 			</div>
 		</div>
-	
 	</nav>
 	<div class="container">
-		<div class="columns is-mobile">
+		<div class="columns">
 		  <div class="column">
-		    <h2 class="title is-2">События</h2>
+		    <h2 class="title is-2">Контакты</h2>
 		  </div>
 		</div>
+	</div>
+	<div class="container">
+	    <div class="columns">
+	    	<div class="column">
+	    		<p><strong>Генеральный директор:</strong></p>
+	    		<p>Романовский</p>
+	    		<p>Фёдор</p>
+	    		<p>Григорьевич</p>
+	    		<p>На основании устава</p>
+	    	</div>
+			<div class="column">
+				<p><strong>БИК</strong> 047003716</p>
+	    		<p><strong>к/с</strong> 30101810700000000716</p>
+	    		<p><strong>Код по ОКПО</strong> 00567209</p>
+	    		<p><strong>Код по ОКВЭД</strong> 01-23</p>
+	    		<p><strong>Код по ОКОНХ</strong> 21220</p>
+			</div>
+			<div class="column">
+				<p><strong>ИНН</strong> 7118503160</p>
+	    		<p><strong>КПП</strong> 711801001</p>
+	    		<p><strong>ОГРН</strong> 1107154005210</p>
+	    		<p><strong>р/с</strong> 40702810900040003387</p>
+	    		<p><strong>Ф-л ГПБ (АО) в г. Туле, г. Тула</strong></p>
+			</div>
+			<div class="column">
+				<p><strong><a href="mailto:info@lazarevo.ru">info@lazarevo.ru</a></strong></p>
+	    		<p>ООО «ПХ «Лазаревское» Россия, 301220, Тульская обл., п. Лазарево, ул. Луговая, д. 1</p>
+	    		<p><strong>+7 (48751) 72-251</strong></p>
+			</div>
 		</div>
-		<div class="container">
-		<div class="columns is-desktop">
-		  <div class="column news">
-		  	<h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
-		  <div class="column news">
-		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
-		  <div class="column news">
-		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
-		</div>
-		<div class="container">
-		<div class="columns is-desktop">
-		  <div class="column news">
-		  	<h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">Открытие нового магазина г.Тула, Калужское шоссе, дом 2</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
-		  <div class="column news">
-		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4"><a href="#">ООО «ПХ «Лазаревское» признано лауреатом конкурса «Лучшие товары и услуги Тульской области»</a></h4>
-		    <a class="button is-warning ">Подробнее</a>
-		  </div>
-		  <div class="column news">
-		    <h6 class="title is-6">12.06.2017</h6>
-		    <h4 class="title is-4 "><a href="#">Врио губернатора Тульской области Алексей Дюмин посетил ООО ПХ «Лазаревское»</a></h4>
-		    <a class="button is-warning">Подробнее</a>
-		  </div>
-		</div>
-		</div>
+	  </div>
+	  <br />
+	<div class="container">
+    	<div id="YMapsID">
+    		<div class="shield"></div>
+	    </div>
 	</div>
 	<footer class="footer">
 	  <div class="container">
