--- a/products.html
+++ b/products.html
@@ -67,7 +67,7 @@
 	</div>
 	<div class="container">
 		<div class="columns">
-		  <a href="#" class="column half-height count-item item-1">
+		  <a href="#" class="column half-height count-item item-potato">
 		    <div class="count-div">
 		    	<div>
 		    		<h1 class="title is-3">Картофель</h1>
